--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
 
                 <section id="primi" class="menu-section">
                     <h2>Primi Piatti</h2>
+
+                    <div class="menu-item">
+                        <div class="menu-item-details">
+                            <input type="checkbox" id="pasta_panna" name="piatto_ordinato[]" value="Pasta ca' panna" class="menu-item-checkbox">
+                            <label for="trofie_zucchine"><h3>Pasta Ca' Panna</h3></label>
+                            <p>Trofie co' salmoni oppuri co 'prosciuttu e tanticcia ri panna senza u lattosiu. - Chef stellata ⭐⭐⭐. La nostra amatissima e fine Teresa</p>
+                        </div>
+                    </div>
+
+                    
                     <div class="menu-item">
                         <div class="menu-item-details">
                             <input type="checkbox" id="trofie_zucchine" name="piatto_ordinato[]" value="Trofie Zucchine e Limone" class="menu-item-checkbox">
@@ -160,6 +170,13 @@
                             <input type="checkbox" id="sorbetto" name="piatto_ordinato[]" value="Sorbetto al Limone" class="menu-item-checkbox">
                             <label for="sorbetto"><h3>Sorbetto al limone</h3></label>
                             <p>Un rinfrescante sorbetto al limone di sicilia</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-item-details">
+                            <input type="checkbox" id="fragole" name="piatto_ordinato[]" value="Fragole e anticorpi" class="menu-item-checkbox">
+                            <label for="sorbetto"><h3>Fragole e anticorpi</h3></label>
+                            <p>Deliziose fragole appena raccolte da terra non lavate. Servite su un piatto di argento dalla Chef ⭐⭐⭐⭐ Teresa. </p>
                         </div>
                     </div>
                 </section>
