--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="menu-item">
                         <div class="menu-item-details">
                             <input type="checkbox" id="pasta_panna" name="piatto_ordinato[]" value="Pasta ca' panna" class="menu-item-checkbox">
-                            <label for="trofie_zucchine"><h3>Pasta Ca' Panna</h3></label>
+                            <label for="pasta_panna"><h3>Pasta Ca' Panna</h3></label>
                             <p>Trofie co' salmoni oppuri co 'prosciuttu e tanticcia ri panna senza u lattosiu. - Chef stellata ⭐⭐⭐. La nostra amatissima e fine Teresa</p>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                     <div class="menu-item">
                         <div class="menu-item-details">
                             <input type="checkbox" id="fragole" name="piatto_ordinato[]" value="Fragole e anticorpi" class="menu-item-checkbox">
-                            <label for="sorbetto"><h3>Fragole e anticorpi</h3></label>
+                            <label for="fragole"><h3>Fragole e anticorpi</h3></label>
                             <p>Deliziose fragole appena raccolte da terra non lavate. Servite su un piatto di argento dalla Chef ⭐⭐⭐⭐ Teresa. </p>
                         </div>
                     </div>
